--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.user{
+  background-color: #61dafb;
+  margin: 15px;
+  padding: 5px;
+  border: 3px solid gray;
+  border-radius: 20px;
+}
